Updated Crypto with comments